--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,75 @@ SecretStorage==2.3.1
 singledispatch==3.4.0.3
 six==1.12.0
 tornado==5.1.1
+root@mcmachas:~# cd bot
+root@mcmachas:~/bot# pip freeze
+asn1crypto==0.24.0
+backports-abc==0.5
+certifi==2020.6.20
+configparser==3.5.0b2
+cryptography==2.6.1
+decorator==4.4.2
+entrypoints==0.3
+enum34==1.1.6
+futures==3.3.0
+html==1.16
+ipaddress==1.0.17
+keyring==17.1.1
+keyrings.alt==3.1.1
+pycrypto==2.6.1
+PyGObject==3.30.4
+python-telegram-bot==12.8
+pyxdg==0.25
+SecretStorage==2.3.1
+singledispatch==3.4.0.3
+six==1.12.0
+tornado==5.1.1
+root@mcmachas:~/bot# pip3 freeze
+aiohttp==3.6.2
+aiounittest==1.4.0
+asn1crypto==0.24.0
+async-timeout==3.0.1
+attrs==19.3.0
+Babel==2.8.0
+certifi==2018.8.24
+chardet==3.0.4
+cryptography==2.6.1
+decorator==4.4.2
+distro-info==0.21
+emoji==0.5.4
+entrypoints==0.3
+googletrans==3.0.0
+h11==0.9.0
+h2==3.2.0
+howlongtobeatpy==0.1.12
+hpack==3.0.0
+hstspreload==2020.6.30
+httpcore==0.9.1
+httplib2==0.11.3
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.6
+keyring==17.1.1
+keyrings.alt==3.1.1
+multidict==4.7.6
+pycrypto==2.6.1
+pycurl==7.43.0.2
+PyGObject==3.30.4
+PySimpleSOAP==1.16.2
+python-apt==1.8.4.1
+python-debian==0.1.35
+python-debianbts==2.8.2
+python-telegram-bot==12.8
+pytz==2020.1
+pyxdg==0.25
+reportbug===7.5.3-deb10u1
+requests==2.21.0
+rfc3986==1.4.0
+SecretStorage==2.3.1
+six==1.12.0
+sniffio==1.1.0
+tornado==6.0.4
+unattended-upgrades==0.1
+urllib3==1.24.1
+wrapt==1.12.1
+yarl==1.4.2
