Refactor and add CallbackContext to command functions

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,6 @@
 max-line-length = 80
 exclude = .venv,venv,.git,bin,lib,build,.eggs
 ignore = E501
+per-file-ignores =
+	api/__init__.py: F401
+	chat_management/__init__.py: F401
