--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
 jobs:
   include:
   - stage: deploy
-    if: branch = master AND type != pull_request
+    if: branch = travis-testing AND type != pull_request
     script: skip
     before_deploy:
     - openssl aes-256-cbc -K $encrypted_05d4d4358b2c_key -iv $encrypted_05d4d4358b2c_iv
