Deploy & run bot on server

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,10 @@ jobs:
     deploy:
       provider: script
       skip_cleanup: true
-      script: scp -r $TRAVIS_BUILD_DIR TG-bot@$HOSTNAME:/home/TG-bot/travis-testing
+      script: 
+        scp -r $TRAVIS_BUILD_DIR TG-bot@$HOSTNAME:/home/TG-bot/travis-testing
+        ssh TG-bot@$HOSTNAME
+        cd travis-testing
+        python3 main.py
       on:
         branch: travis-testing
