--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ jobs:
       skip_cleanup: true
       script: 
         scp -r $TRAVIS_BUILD_DIR TG-bot@$HOSTNAME:/home/TG-bot/travis-testing
-        ssh -i deploy_rsa TG-bot@45.77.172.28  "screen -S WeirdIndiaBot -dm bash -c 'cd travis-testing; python3 main.py'"
+        ssh -i /tmp/deploy_rsa TG-bot@45.77.172.28  "screen -S WeirdIndiaBot -dm bash -c 'cd travis-testing; python3 main.py'"
       on:
         branch: travis-testing
