Deploy & run bot on server

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,6 @@ jobs:
       provider: script
       skip_cleanup: true
       script: 
-        scp -r $TRAVIS_BUILD_DIR TG-bot@$HOSTNAME:/home/TG-bot/travis-testing
-        ssh -i /tmp/deploy_rsa TG-bot@45.77.172.28  "screen -S WeirdIndiaBot -dm bash -c 'cd travis-testing; python3 main.py'"
+        bash deploy.sh
       on:
         branch: travis-testing
