--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ dist: bionic
 language: python
 python:
 - '3.7'
+install:
+  - pip install -r requirements.txt
+script:
+  - flake8 .
 addons:
   ssh_known_hosts:
   - "$HOSTNAME"
@@ -11,7 +15,7 @@ before_script:
 jobs:
   include:
   - stage: deploy
-    if: branch = master AND type != pull_request
+    if: branch = master OR branch = travisci-testing AND type != pull_request
     script: skip
     before_deploy:
     - openssl aes-256-cbc -K $encrypted_05d4d4358b2c_key -iv $encrypted_05d4d4358b2c_iv
@@ -23,6 +27,13 @@ jobs:
       provider: script
       skip_cleanup: true
       script: 
-        bash deploy.sh
+        bash scripts/deploy_master.sh
       on:
         branch: master
+    deploy:
+      provider: script
+      skip_cleanup: true
+      script:
+        bash scripts/deploy_testing.sh
+      on:
+        branch: travisci-testing
