--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ python:
 - '3.7'
 install:
   - pip install -r requirements.txt
-script:
-  - flake8 .
+before_script:
+  - "flake8 ."
 addons:
   ssh_known_hosts:
   - "$HOSTNAME"
