--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,12 @@ python:
 - '3.7'
 install:
   - pip install -r requirements.txt
-before_script:
-  - "flake8 ."
 addons:
   ssh_known_hosts:
   - "$HOSTNAME"
 before_script:
 - echo -e "Host $HOSTNAME\n\tStrictHostKeyChecking no" >> ~/.ssh/config
+- flake8 .
 jobs:
   include:
   - stage: deploy
