--- a/.travis.yml
+++ b/.travis.yml
@@ -25,14 +25,13 @@ jobs:
     - chmod 600 /tmp/deploy_rsa
     - ssh-add /tmp/deploy_rsa
     deploy:
-      provider: script
+      - provider: script
       skip_cleanup: true
       script: 
         bash scripts/deploy.sh bot superseriousbot
       on:
         branch: master
-    deploy:
-      provider: script
+      - provider: script
       skip_cleanup: true
       script:
         bash scripts/deploy.sh travis-testing weirdindianbot
