--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,27 @@
 os: linux
 dist: bionic
 language: python
-python:
-- '3.7'
-install:
-  - pip install -r requirements.txt
+python: '3.7'
 addons:
-  ssh_known_hosts:
-  - "$HOSTNAME"
-before_script:
-- echo -e "Host $HOSTNAME\n\tStrictHostKeyChecking no" >> ~/.ssh/config
+  ssh_known_hosts: "$HOSTNAME"
+
+install: pip install -r requirements.txt
+
+stages:
+  - name: test
+    if: type = pull_request
+  - name: deploy
+    if: branch = master AND type != pull_request
+
 jobs:
   include:
-  - stage: flake8 test
-    if: type = pull_request
-    script: flake8 .
-  - stage: deploy
-    if: branch = master OR branch = travisci-testing AND type != pull_request
-    script: skip
-    before_deploy:
-    - openssl aes-256-cbc -K $encrypted_05d4d4358b2c_key -iv $encrypted_05d4d4358b2c_iv
-      -in deploy_rsa.enc -out /tmp/deploy_rsa -d
-    - eval "$(ssh-agent -s)"
-    - chmod 600 /tmp/deploy_rsa
-    - ssh-add /tmp/deploy_rsa
-    deploy:
-      - provider: script
-        skip_cleanup: true
-        script: bash scripts/deploy.sh bot superseriousbot
-        on:
-          branch: master
-      - provider: script
-        skip_cleanup: true
-        script: bash scripts/deploy.sh travis-testing weirdindianbot
-        on:
-          branch: travisci-testing
+    - script: flake8 .
+    - stage: deploy
+      before_script:
+        - echo -e "Host $HOSTNAME\n\tStrictHostKeyChecking no" >> ~/.ssh/config
+        - openssl aes-256-cbc -K $encrypted_05d4d4358b2c_key -iv $encrypted_05d4d4358b2c_iv
+          -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+        - eval "$(ssh-agent -s)"
+        - chmod 600 /tmp/deploy_rsa
+        - ssh-add /tmp/deploy_rsa
+      script: bash scripts/deploy.sh 
