--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,33 @@
 os: linux
 dist: bionic
 language: python
-python: '3.7'
+python:
+- '3.7'
+install:
+  - pip install -r requirements.txt
 addons:
-  ssh_known_hosts: "$HOSTNAME"
-
-install: pip install -r requirements.txt
-
-stages:
-  - name: test
-    if: type = pull_request
-  - name: deploy
-    if: branch = master AND type != pull_request
-
+  ssh_known_hosts:
+  - "$HOSTNAME"
+before_script:
+- echo -e "Host $HOSTNAME\n\tStrictHostKeyChecking no" >> ~/.ssh/config
 jobs:
   include:
-    - script: flake8 .
-    - stage: deploy
-      before_script:
-        - echo -e "Host $HOSTNAME\n\tStrictHostKeyChecking no" >> ~/.ssh/config
-        - openssl aes-256-cbc -K $encrypted_05d4d4358b2c_key -iv $encrypted_05d4d4358b2c_iv
-          -in deploy_rsa.enc -out /tmp/deploy_rsa -d
-        - eval "$(ssh-agent -s)"
-        - chmod 600 /tmp/deploy_rsa
-        - ssh-add /tmp/deploy_rsa
-      script: bash scripts/deploy.sh 
+  - stage: flake8 test
+    if: type = pull_request AND branch = master
+    script: flake8 .
+before_deploy:
+  - openssl aes-256-cbc -K $encrypted_05d4d4358b2c_key -iv $encrypted_05d4d4358b2c_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+  - eval "$(ssh-agent -s)"
+  - chmod 600 /tmp/deploy_rsa
+  - ssh-add /tmp/deploy_rsa
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: bash scripts/deploy.sh bot superseriousbot
+    on:
+      branch: master
+  - provider: script
+    skip_cleanup: true
+    script: bash scripts/deploy.sh travis-testing weirdindianbot
+    on:
+      branch: travisci-testing
