--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ install:
   - pip install -r requirements.txt
 addons:
   ssh_known_hosts:
-  - "$HOSTNAME"
+    - "$HOSTNAME"
+
 before_script:
 - echo -e "Host $HOSTNAME\n\tStrictHostKeyChecking no" >> ~/.ssh/config
 jobs:
@@ -15,19 +16,22 @@ jobs:
   - stage: flake8 test
     if: type = pull_request AND branch = master
     script: flake8 .
-before_deploy:
-  - openssl aes-256-cbc -K $encrypted_05d4d4358b2c_key -iv $encrypted_05d4d4358b2c_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
-  - eval "$(ssh-agent -s)"
-  - chmod 600 /tmp/deploy_rsa
-  - ssh-add /tmp/deploy_rsa
-deploy:
-  - provider: script
-    skip_cleanup: true
-    script: bash scripts/deploy.sh bot superseriousbot master
-    on:
-      branch: master
-  - provider: script
-    skip_cleanup: true
-    script: bash scripts/deploy.sh travis-testing weirdindianbot travisci-testing
-    on:
-      branch: travisci-testing
+  - stage: deploy
+    if: branch = master OR branch = travisci-testing AND type != pull_request
+    script: skip
+    before_deploy:
+    - openssl aes-256-cbc -K $encrypted_05d4d4358b2c_key -iv $encrypted_05d4d4358b2c_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+    - eval "$(ssh-agent -s)"
+    - chmod 600 /tmp/deploy_rsa
+    - ssh-add /tmp/deploy_rsa
+    deploy:
+      - provider: script
+        skip_cleanup: true
+        script: bash scripts/deploy.sh bot superseriousbot master
+        on:
+          branch: master
+      - provider: script
+        skip_cleanup: true
+        script: bash scripts/deploy.sh travis-testing weirdindianbot master
+        on:
+          branch: travisci-testing
