[weather] urlencode for payload

--- a/configuration/example_config.yaml
+++ b/configuration/example_config.yaml
@@ -3,3 +3,5 @@
 # TELEGRAM_BOT_TOKEN: "tokentokentoken"
 # WOLFRAM_APP_ID: "appid"
 # OPENWEATHER_API_KEY: "apikey"
+# GOODREADS_API_KEY: "apikey"
+# AIRVISUAL_API_KEY: "apikey"
