--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pre-commit==2.9.0
 python-telegram-bot==13.0
 pyyaml==5.3.1
 requests==2.25.0
+spurdify==0.3.0
 urllib3==1.26.2
 wolframalpha==4.1.0
 mysql-connector-python~=8.0.22
