--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 Babel==2.9.0
 cloudmersive_image_api_client==3.0.1
 dateparser==1.0.0
-emoji==0.6.0
-flake8==3.8.4
+emoji>=0.6.0
+flake8>=3.8.4
 geopy==2.0.0
 googletrans==3.0.0
 gtts==2.2.1
 howlongtobeatpy==0.1.15
 mysql-connector-python~=8.0.22
 pillow==8.0.1
-pre-commit==2.9.3
+pre-commit>=2.9.3
 python-telegram-bot==13.1
 pyyaml==5.3.1
 requests==2.25.1
