--- a/configuration/example_config.yaml
+++ b/configuration/example_config.yaml
@@ -9,6 +9,8 @@ OPENWEATHER_API_KEY: "apikey"
 GOODREADS_API_KEY: "apikey"
 AIRVISUAL_API_KEY: "apikey"
 JOGI_FILE_ID: "fileid"
-JOGI_FILE_RESTORE_USERS:
+FOR_WHAT_ID: "fileid"
+PUNYA_SONG_ID: "fileid"
+AUDIO_RESTORE_USERS:
   - "username1"
   - "username2"
