Add docker-compose workflow
We can use the example compose file on the server to set up mysql and
watchtower automatically.

--- a/configuration/example.env
+++ b/configuration/example.env
@@ -3,8 +3,11 @@ CLOUDMERSIVE_API_KEY=""
 FOR_WHAT_ID=""
 GOODREADS_API_KEY=""
 JOGI_FILE_ID=""
-MYSQL_PW=""
-MYSQL_USERNAME=""
+MYSQL_DATABASE=""
+MYSQL_IP_ALIAS=""
+MYSQL_PASSWORD=""
+MYSQL_ROOT_PASSWORD
+MYSQL_USER=""
 OPENWEATHER_API_KEY=""
 PUNYA_SONG_ID=""
 TELEGRAM_BOT_TOKEN=""
