--- a/configuration/example_config.yaml
+++ b/configuration/example_config.yaml
@@ -4,8 +4,11 @@ CLIMACELL_API_KEY: "apikey"
 CLOUDMERSIVE_API_KEY: "apikey"
 GOODREADS_API_KEY: "apikey"
 JOGI_FILE_ID: "fileid"
-MYSQL_PW: "password"
-MYSQL_USERNAME: "bot"
+MYSQL_ROOT_PASSWORD: "root_password"
+MYSQL_DATABASE: "db_name"
+MYSQL_USER: "username"
+MYSQL_PASSWORD: "user_password"
+MYSQL_IP_ALIAS: "mysql_ip_or_alias"
 OPENWEATHER_API_KEY: "apikey"
 TELEGRAM_BOT_TOKEN: "tokentokentoken"
 WOLFRAM_APP_ID: "appid"
