Update config and compose files

--- a/configuration/example.env
+++ b/configuration/example.env
@@ -1,4 +1,4 @@
-CLIMACELL_API_KEY
+CLIMACELL_API_KEY=""
 CLOUDMERSIVE_API_KEY=""
 FOR_WHAT_ID=""
 GOODREADS_API_KEY=""
@@ -6,10 +6,13 @@ JOGI_FILE_ID=""
 MYSQL_DATABASE=""
 MYSQL_IP_ALIAS=""
 MYSQL_PASSWORD=""
-MYSQL_ROOT_PASSWORD
+MYSQL_ROOT_PASSWORD=""
 MYSQL_USER=""
 OPENWEATHER_API_KEY=""
 PUNYA_SONG_ID=""
 TELEGRAM_BOT_TOKEN=""
 WOLFRAM_APP_ID=""
 AUDIO_RESTORE_USERS=""
+PYTHON_QBITTORRENTAPI_HOST=""
+PYTHON_QBITTORRENTAPI_USERNAME=""
+PYTHON_QBITTORRENTAPI_PASSWORD=""
