--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 max-line-length = 80
 exclude = .venv,venv,.git,bin,lib,build,.eggs
-ignore = E501
+ignore = E501, W503
 per-file-ignores =
 	api/__init__.py: F401
 	chat_management/__init__.py: F401
