--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,6 @@ ignore = E501, W503
 per-file-ignores =
 	api/__init__.py: F401
 	chat_management/__init__.py: F401
+
+[mypy]
+ignore_missing_imports = True
