[docker] fix breaking docker images

--- a/configuration/example_config.yaml
+++ b/configuration/example_config.yaml
@@ -10,6 +10,7 @@ MYSQL_USER: "username"
 MYSQL_PASSWORD: "user_password"
 MYSQL_IP_ALIAS: "mysql_ip_or_alias"
 OPENWEATHER_API_KEY: "apikey"
+GIPHY_API_KEY: "apikey"
 PYTHON_QBITTORRENTAPI_HOST: "localhost:443"
 PYTHON_QBITTORRENTAPI_USERNAME: "user"
 PYTHON_QBITTORRENTAPI_PASSWORD: "pass"
