[typing] add Type Checks + minor changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
 Babel==2.9.0
 cloudmersive_image_api_client==3.0.1
 dateparser==1.0.0
-emoji>=0.6.0
+emoji==1.2.0
 flake8>=3.8.4
 geopy==2.1.0
-googletrans==3.0.0
-gtts==2.2.1
-howlongtobeatpy==0.1.15
-mysql-connector-python~=8.0.22
-pillow==8.1.0
-pre-commit>=2.9.3
-python-telegram-bot==13.1
-pyyaml==5.3.1
+googletrans==4.0.0-rc1
+gtts==2.2.2
+howlongtobeatpy==0.1.17
+mysql-connector-python==8.0.23
+pillow==8.1.2
+pre-commit==2.11.1
+python-telegram-bot==13.3
+pyyaml==5.4.1
 qbittorrent-api==2020.12.15
+regex==2020.11.13
 requests==2.25.1
 spurdify==0.3.0
-urllib3==1.26.2
-wolframalpha==4.1.1
+urllib3==1.26.3
+wolframalpha==5.0.0
