--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -16,11 +16,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-#   - name: Install dependencies
-#     run: |
-#       python -m pip install --upgrade pip
-#       pip install flake8 pytest
-#       if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
         pip install flake8
