--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   watchtower:
     image: containrrr/watchtower
@@ -6,11 +5,10 @@ services:
     command: --label-enable --cleanup --interval 300
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-  ssgbot:
-    # image: superserious/bot:latest
 
-    # Build locally
-    build: .
+  ssgbot:
+    image: ghcr.io/super-serious/bot:latest
+    # build: .
     volumes:
       - /db/:/db/
       - .:/code
@@ -20,5 +18,7 @@ services:
       - qbt
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
+    restart: unless-stopped
+
   qbt:
     image: ghcr.io/linuxserver/qbittorrent
