--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ uwuify==1.0.2
 wolframalpha==5.0.0
 pafy==0.5.5
 pandas==1.2.4
+pillow==8.2.0
 matplotlib==3.4.2
 numpy==1.20.3
 azure-cognitiveservices-vision-computervision
