--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
 
   ssgbot:
-    image: ghcr.io/super-serious/bot:latest
-    # build: .
+    # image: ghcr.io/super-serious/bot:latest
+    build: .
     volumes:
       - /db/:/db/
       - .:/code
