--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
+DateTime==4.3
+azure-cognitiveservices-vision-computervision
 emoji>=1.2.0
 flake8>=3.8.4
-geopy==2.1.0
+geopy==2.2.0
+google-cloud-texttospeech
 googletrans==4.0.0-rc1
 howlongtobeatpy==0.1.18
-pre-commit>=2.11.1
+matplotlib==3.4.2
+numpy==1.21.1
+pafy==0.5.5
+pandas==1.3.1
+pillow==8.3.1
+python-dateutil==2.8.1
 python-telegram-bot==13.7
-pyyaml==5.4.1
 qbittorrent-api==2021.5.22
-regex==2021.4.4
-requests==2.25.1
+regex==2021.8.3
+requests==2.26.0
 spurdify==0.3.0
 uwuify==1.0.2
 wolframalpha==5.0.0
-pafy==0.5.5
-pandas==1.2.4
-pillow==8.2.0
-matplotlib==3.4.2
-numpy==1.20.3
-azure-cognitiveservices-vision-computervision
-google-cloud-texttospeech
+youtube_dl
