--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 DateTime==4.3
 azure-cognitiveservices-vision-computervision
-emoji>=1.2.0
+emoji==1.2.0
 flake8>=3.8.4
 geopy==2.2.0
 google-cloud-texttospeech
-googletrans==4.0.0-rc1
+googletrans==4.0.0rc1
 howlongtobeatpy==0.1.18
 matplotlib==3.4.2
 numpy==1.21.1
@@ -14,6 +14,7 @@ pillow==8.3.1
 python-dateutil==2.8.1
 python-telegram-bot==13.7
 qbittorrent-api==2021.5.22
+redis==3.5.3
 regex==2021.8.3
 requests==2.26.0
 spurdify==0.3.0
