[dcoker] Simplify multilayer Doockerfile and add caching

--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -20,6 +20,9 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - uses: satackey/action-docker-layer-caching@v0.0.11
+        continue-on-error: true
+
       - name: Build the ssgbot Docker image
         run: |
           docker build . --tag ghcr.io/super-serious/bot:latest
