--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-DateTime==4.3
 azure-cognitiveservices-vision-computervision
+DateTime==4.3
 emoji==1.4.2
 flake8>=3.8.4
 geopy==2.2.0
@@ -10,15 +10,15 @@ matplotlib==3.4.3
 numpy==1.21.2
 pafy==0.5.5
 pandas==1.3.2
-pillow==8.3.1
+pillow==8.3.2
+pydub>=0.25.1
 python-dateutil==2.8.2
 python-telegram-bot==13.7
 qbittorrent-api==2021.5.22
 redis==3.5.3
-regex==2021.8.3
+regex==2021.8.28
 requests==2.26.0
 spurdify==0.3.0
 uwuify==1.1.0
 wolframalpha==5.0.0
 youtube_dl
-pydub==0.25.1
