--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ per-file-ignores =
 	api/__init__.py: F401
 	chat_management/__init__.py: F401
 	main.py: E241
+	configuration/__init__.py: E241
 
 [mypy]
 ignore_missing_imports = True
