--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 azure-cognitiveservices-vision-computervision
 DateTime==4.3
-emoji==1.4.2
+emoji>=1.4.2
 flake8>=3.8.4
 geopy==2.2.0
 google-cloud-texttospeech
@@ -9,14 +9,14 @@ howlongtobeatpy==0.1.18
 matplotlib==3.4.3
 numpy==1.21.2
 pafy==0.5.5
-pandas==1.3.2
+pandas==1.3.3
 pillow==8.3.2
 pydub>=0.25.1
 python-dateutil==2.8.2
 python-telegram-bot==13.7
-qbittorrent-api==2021.5.22
+qbittorrent-api==2021.8.23
 redis==3.5.3
-regex==2021.8.28
+regex==2021.9.30
 requests==2.26.0
 spurdify==0.3.0
 uwuify==1.1.0
