--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ DateTime==4.3
 emoji>=1.4.2
 flake8>=3.8.4
 geopy==2.2.0
-google-cloud-texttospeech
 googletrans==4.0.0rc1
+gtts==2.2.2
 howlongtobeatpy==0.1.18
 matplotlib==3.4.3
 numpy==1.21.2
