--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 max-line-length = 80
-exclude = .venv,venv,.git,bin,lib,build,.eggs
+exclude = .venv,venv,.git,bin,lib,build,.eggs,pydub_patch.py
 ignore = E501, W503
 per-file-ignores =
 	api/__init__.py: F401
