--- a/requirements.txt
+++ b/requirements.txt
@@ -7,16 +7,16 @@ googletrans==4.0.0rc1
 gtts==2.2.2
 howlongtobeatpy==0.1.18
 matplotlib==3.4.3
-numpy==1.21.2
+numpy>=1.21.4
 pafy==0.5.5
-pandas==1.3.3
-pillow==8.3.2
+pandas>=1.3.4
+pillow==8.4.0
 pydub>=0.25.1
 python-dateutil==2.8.2
 python-telegram-bot==13.7
 qbittorrent-api==2021.8.23
 redis==3.5.3
-regex==2021.9.30
+regex>=2021.11.2
 requests==2.26.0
 spurdify==0.3.0
 uwuify==1.1.0
