[ci] add automated releases

--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -1,4 +1,4 @@
-name: Publish image
+name: Publish Image
 
 on:
   push:
@@ -13,6 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Get Version
+        run: |
+          echo "SSGBOT_VERSION=$(cat VERSION)" >> $GITHUB_ENV
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -20,7 +24,16 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "${{ env.SSGBOT_VERSION }}"
+          prerelease: false
+          title: "v${{ env.SSGBOT_VERSION }}"
+          files: |
+            LICENSE
+
       - name: Build the SSGBOT Docker image
         run: |
-          docker build . --tag ghcr.io/super-serious/bot:latest
+          docker build . --tag ghcr.io/super-serious/bot:${SSGBOT_VERSION} --tag ghcr.io/super-serious/bot:latest
           docker push ghcr.io/super-serious/bot:latest
