--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ numpy>=1.21.4
 pafy==0.5.5
 pandas>=1.3.4
 pillow==8.4.0
+praw>=7.5.0
 pydub>=0.25.1
 python-dateutil==2.8.2
 python-telegram-bot==13.9
