--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,13 +1,13 @@
-name: Python build
+name: Python check
 
 on: [ pull_request ]
 
 jobs:
-  build:
+  check:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.7, 3.8, 3.9 ]
+        python-version: [ 3.8, 3.9, 3.10 ]
 
     steps:
       - uses: actions/checkout@v2
@@ -20,4 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements.txt
+
+      - name: Lint with black
+        uses: psf/black@stable
