--- a/.github/workflows/codesee-arch-diagram.yml
+++ b/.github/workflows/codesee-arch-diagram.yml
@@ -2,6 +2,8 @@ on:
   push:
     branches:
       - master
+  pull_request_target:
+    types: [opened, synchronize, reopened]
 
 name: CodeSee Map
 
