--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -24,3 +24,10 @@ jobs:
         run: |
           docker build . --tag ghcr.io/super-serious/bot:${TAG} --tag ghcr.io/super-serious/bot:latest
           docker push ghcr.io/super-serious/bot --all-tags
+
+      - name: Send changelog to telegram channel
+        uses: tyagdit/release-telegram-action@latest
+        with:
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          channel: '-1005439439451'
+          changelog: ${{ github.event.release.body }}
