--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -26,7 +26,7 @@ jobs:
           docker push ghcr.io/super-serious/bot --all-tags
 
       - name: Send changelog to telegram channel
-        uses: tyagdit/release-telegram-action@latest
+        uses: tyagdit/release-telegram-action
         with:
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           channel: '-1005439439451'
