ci(cache): cache Python 3.9 builds

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,22 +1,21 @@
 name: Python check
 
-on: [ pull_request ]
+on: [pull_request]
 
 jobs:
   check:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [ '3.8', '3.9', '3.10' ]
-
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+      - name: Lint Commit Messages
+        uses: wagoid/commitlint-github-action@v4
+
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v3
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.9"
+          cache: "pip"
 
       - name: Install dependencies
         run: |
@@ -26,4 +25,4 @@ jobs:
       - name: Lint with black
         uses: psf/black@stable
         with:
-          options: '--check'
+          options: "--check"
