--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -2,32 +2,23 @@ name: Publish Image
 
 on:
   release:
-    types: [ published ]
+    types: [published]
 
 jobs:
   publish-docker-image:
-    if: github.repository_owner == 'Super-Serious'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+      - name: Build and push
+        uses: docker/build-push-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build the SSGBOT Docker image
-        env:
-          TAG: ${{ github.event.release.tag_name }}
-        run: |
-          docker build . --tag ghcr.io/super-serious/bot:${TAG} --tag ghcr.io/super-serious/bot:latest
-          docker push ghcr.io/super-serious/bot --all-tags
-
-      - name: Send changelog to telegram channel
-        uses: tyagdit/release-telegram-action@master
-        with:
-          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          channel: -1001543943945
-          changelog: ${{ github.event.release.body }}
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: latest
+          cache-from: type=gha
+          cache-to: type=gha
