--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - "master"
 
 jobs:
-  build:
+  release:
     name: Release
     runs-on: ubuntu-latest
     steps:
@@ -18,3 +18,21 @@ jobs:
         run: |
           npm i -g semantic-release @semantic-release/changelog
           semantic-release
+
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: latest
+          cache-from: type=gha
+          cache-to: type=gha
