--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,15 +24,23 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Build and push
-        uses: docker/build-push-action@v2
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Github Packages
+        uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PAT }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
           context: .
           file: ./Dockerfile
           push: true
           tags: latest
           cache-from: type=gha
-          cache-to: type=gha
+          cache-to: type=gha,mode=max
