ci(docker): explicitly assign write permissions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,9 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+
     steps:
       - uses: actions/checkout@v2
 
