--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}:${{ github.sha }}
-            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/obviyus/superseriousbot:${{ github.sha }}
+            ghcr.io/obviyus/superseriousbot:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
