--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          npm i -g semantic-release @semantic-release/changelog
+          npm i -g semantic-release @semantic-release/changelog @semantic-release/git
           semantic-release
 
   publish:
