--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,21 @@ emoji>=1.4.2
 flake8>=3.8.4
 geopy==2.2.0
 googletrans==4.0.0rc1
-gtts==2.2.2
+gtts==2.2.4
 howlongtobeatpy==0.1.18
-matplotlib==3.5.1
+matplotlib==3.5.2
 numpy>=1.21.4
 pafy==0.5.5
 pandas>=1.3.4
-pillow==9.0.1
+pillow==9.1.0
 praw>=7.5.0
 pydub>=0.25.1
 python-dateutil==2.8.2
 python-telegram-bot==13.11
 redis>=4.1.1
 redvid
-regex>=2021.11.2
+dateparser==1.1.1
+regex
 requests==2.27.1
 spurdify==0.3.0
 uwuify==1.1.0
