--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,12 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-python-telegram-bot = "20.0a1"
 Cerberus = "^1.3.4"
+coloredlogs = "^15.0.1"
+redis = "^4.3.3"
+redvid = "^1.2.0"
+python-telegram-bot = {version = "^20.0a2", allow-prereleases = true}
+yt-dlp = "^2022.6.22"
 
 [tool.poetry.dev-dependencies]
 
