--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ redvid = "^1.2.0"
 python-telegram-bot = {version = "^20.0a2", allow-prereleases = true}
 yt-dlp = "^2022.6.22"
 asyncpraw = "^7.5.0"
+dateparser = "^1.1.1"
+ratelimit = "^2.2.1"
 
 [tool.poetry.dev-dependencies]
 
