--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.10"
 Cerberus = "^1.3.4"
-coloredlogs = "^15.0.1"
 redis = "^4.3.3"
 redvid = "^1.2.0"
 python-telegram-bot = {version = "^20.0a2", allow-prereleases = true}
@@ -16,6 +15,8 @@ yt-dlp = "^2022.6.22"
 asyncpraw = "^7.5.0"
 dateparser = "^1.1.1"
 ratelimit = "^2.2.1"
+coloredlogs = "^15.0.1"
+wolframalpha = "^5.0.0"
 
 [tool.poetry.dev-dependencies]
 
