--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ translatepy = "^2.3"
 uwuify = "^1.1.0"
 azure-cognitiveservices-vision-computervision = "^0.9.0"
 geopy = "^2.2.0"
+instaloader = "^4.9.2"
 
 [tool.poetry.dev-dependencies]
 
