--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ uwuify = "^1.1.0"
 azure-cognitiveservices-vision-computervision = "^0.9.0"
 geopy = "^2.2.0"
 instaloader = "^4.9.2"
+httpx = "^0.23.0"
 
 [tool.poetry.dev-dependencies]
 
