--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ uwuify = "^1.1.0"
 azure-cognitiveservices-vision-computervision = "^0.9.0"
 geopy = "^2.2.0"
 httpx = "^0.23.0"
+pyvis = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
 
