--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ authors = ["Ayaan Zaidi <hi@obviy.us>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.11"
 Cerberus = "^1.3.4"
 redis = "^4.3.4"
 redvid = "^1.2.0"
 python-telegram-bot = {version = "^20.0a2", allow-prereleases = true}
-yt-dlp = "^2022.7.18"
+yt-dlp = "^2022.8.19"
 asyncpraw = "^7.5.0"
 dateparser = "^1.1.1"
 ratelimit = "^2.2.1"
@@ -24,6 +24,7 @@ azure-cognitiveservices-vision-computervision = "^0.9.0"
 geopy = "^2.2.0"
 httpx = "^0.23.0"
 pyvis = "^0.2.1"
+cinemagoer = "^2022.2.11"
 
 [tool.poetry.dev-dependencies]
 
