--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = ">=3.10,<3.11"
 Cerberus = "^1.3.4"
 redis = "^4.3.4"
 redvid = "^1.2.0"
-python-telegram-bot = {version = "^20.0a2", allow-prereleases = true}
+python-telegram-bot = { version = "^20.0a4", allow-prereleases = true, extras = ["rate-limiter"] }
 yt-dlp = "^2022.8.19"
 asyncpraw = "^7.5.0"
 dateparser = "^1.1.1"
