--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,12 @@ httpx = "^0.23.0"
 pyvis = "^0.3.0"
 cinemagoer = "^2022.2.11"
 networkx = "^2.8.6"
-
-[tool.poetry.dev-dependencies]
+whisper = {git = "https://github.com/openai/whisper.git"}
+torch = "^1.12.1"
+tqdm = "^4.64.1"
+numpy = "^1.23.4"
+transformers = "^4.23.1"
+ffmpeg-python = "^0.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
