--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,12 @@ python = ">=3.10,<3.11"
 Cerberus = "^1.3.4"
 redis = "^4.3.4"
 redvid = "^1.2.0"
-python-telegram-bot = { version = "^20.0a4", allow-prereleases = true, extras = ["rate-limiter"] }
+python-telegram-bot = { version = "^20.0a4", allow-prereleases = true, extras = [
+    "rate-limiter",
+] }
 yt-dlp = "^2022.10.4"
-asyncpraw = "^7.5.0"
-dateparser = "^1.1.1"
+asyncpraw = "^7.6.0"
+dateparser = "^1.1.2"
 ratelimit = "^2.2.1"
 coloredlogs = "^15.0.1"
 howlongtobeatpy = "^1.0.2"
@@ -25,7 +27,8 @@ httpx = "^0.23.0"
 pyvis = "^0.3.0"
 cinemagoer = "^2022.2.11"
 networkx = "^2.8.7"
-whisper = {git = "https://github.com/openai/whisper.git"}
+# All Whisper dependencies
+whisper = { git = "https://github.com/openai/whisper.git" }
 torch = "^1.12.1"
 tqdm = "^4.64.1"
 numpy = "^1.23.4"
