--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,16 +31,15 @@ jobs:
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        id: buildx
+        id: builder
         uses: docker/setup-buildx-action@v1
-        
+
       - name: "Append ARM buildx builder"
         uses: baschny/append-buildx-action@v1
         with:
           builder: ${{ steps.builder.outputs.name }}
           endpoint: "ssh://ubuntu@140.238.243.7"
           ssh_private_key: ${{ secrets.ARM64_RUNNER_SSH_PRIVATE_KEY }}
-
 
       - name: Login to GHCR
         uses: docker/login-action@v1
