--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ redvid = "^1.2.0"
 python-telegram-bot = { version = "^20.0a6", allow-prereleases = true, extras = [
     "rate-limiter",
     "job-queue",
+    "webhooks"
 ] }
 yt-dlp = "^2022.11.11"
 asyncpraw = "^7.6.1"
