--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
 Cerberus = "^1.3.4"
-redis = "^4.3.5"
+redis = "^4.4.0"
 redvid = "^1.2.0"
 python-telegram-bot = { version = "^20.0a6", allow-prereleases = true, extras = [
     "rate-limiter",
@@ -19,16 +19,17 @@ yt-dlp = "^2022.11.11"
 asyncpraw = "^7.6.1"
 dateparser = "^1.1.4"
 coloredlogs = "^15.0.1"
-howlongtobeatpy = "^1.0.2"
+howlongtobeatpy = "^1.0.5"
 spurdify = "^0.3.0"
 translatepy = "^2.3"
-uwuify = "^1.1.0"
+uwuify = "^1.2.1"
 geopy = "^2.3.0"
 httpx = "^0.23.1"
 pyvis = "^0.3.1"
-cinemagoer = "^2022.2.11"
+cinemagoer = "^2022.12.4"
 networkx = "^2.8.8"
 openai = "^0.25.0"
+poetryup = "^0.12.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
