--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = ">=3.10,<4.0"
 Cerberus = "^1.3.4"
 redis = "^4.4.0"
 redvid = "^1.2.0"
-python-telegram-bot = { version = "^20.0a6", allow-prereleases = true, extras = [
+python-telegram-bot = { version = "^20.0b0", allow-prereleases = true, extras = [
     "rate-limiter",
     "job-queue",
     "webhooks"
@@ -29,7 +29,7 @@ pyvis = "^0.3.1"
 cinemagoer = "^2022.12.4"
 networkx = "^2.8.8"
 openai = "^0.25.0"
-poetryup = "^0.12.5"
+poetryup = "^0.12.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
