--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,26 +10,24 @@ python = ">=3.10,<4.0"
 Cerberus = "^1.3.4"
 redis = "^4.4.0"
 redvid = "^1.2.0"
-python-telegram-bot = { version = "^20.0b0", allow-prereleases = true, extras = [
+python-telegram-bot = { version = "^20.0", allow-prereleases = true, extras = [
     "rate-limiter",
     "job-queue",
     "webhooks"
 ] }
-yt-dlp = "^2022.11.11"
+yt-dlp = "^2023.1.6"
 asyncpraw = "^7.6.1"
-dateparser = "^1.1.4"
+dateparser = "^1.1.5"
 coloredlogs = "^15.0.1"
 howlongtobeatpy = "^1.0.5"
 spurdify = "^0.3.0"
 translatepy = "^2.3"
 uwuify = "^1.2.1"
 geopy = "^2.3.0"
-httpx = "^0.23.1"
+httpx = "^0.23.3"
 pyvis = "^0.3.1"
-cinemagoer = "^2022.12.4"
+cinemagoer = "^2022.12.27"
 networkx = "^2.8.8"
-openai = "^0.25.0"
-poetryup = "^0.12.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
