--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
 Cerberus = "^1.3.4"
-redis = "^4.5.3"
+redis = "^4.5.4"
 redvid = "^1.2.0"
 python-telegram-bot = { version = "^20.2", allow-prereleases = true, extras = [
     "rate-limiter",
@@ -29,6 +29,7 @@ pyvis = "^0.3.2"
 cinemagoer = "^2022.12.27"
 networkx = "^3.0"
 openai = "^0.27.2"
+rotten-tomatoes-client = "^0.0.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
