--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ cinemagoer = "^2023.5.1"
 networkx = "^3.1"
 openai = "^0.27.7"
 rotten-tomatoes-client = "^0.0.3"
+beautifulsoup4 = "^4.12.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
