--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,14 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
 Cerberus = "^1.3.4"
-redis = "^4.5.5"
+redis = "^4.6.0"
 redvid = "^1.2.0"
 python-telegram-bot = { version = "^20.3", allow-prereleases = true, extras = [
     "rate-limiter",
     "job-queue",
     "webhooks"
 ] }
-yt-dlp = "^2023.3.4"
+yt-dlp = "^2023.7.6"
 asyncpraw = "^7.7.0"
 dateparser = "^1.1.8"
 coloredlogs = "^15.0.1"
@@ -31,6 +31,7 @@ networkx = "^3.1"
 openai = "^0.27.8"
 rotten-tomatoes-client = "^0.0.3"
 beautifulsoup4 = "^4.12.2"
+simpleaichat = "^0.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
