--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ python = ">=3.10,<4.0"
 Cerberus = "^1.3.5"
 redis = "^5.0.0"
 redvid = "^2.0.2"
-python-telegram-bot = { version = "^20.4", allow-prereleases = true, extras = [
+python-telegram-bot = { version = "^20.5", extras = [
     "rate-limiter",
     "job-queue",
-    "webhooks"
+    "webhooks",
 ] }
 yt-dlp = "^2023.7.6"
 asyncpraw = "^7.7.1"
