--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ python-telegram-bot = { version = "^20.5", extras = [
     "job-queue",
     "webhooks",
 ] }
-yt-dlp = "^2023.7.6"
+yt-dlp = "^2023.9.24"
 asyncpraw = "^7.7.1"
 dateparser = "^1.1.8"
 coloredlogs = "^15.0.1"
@@ -24,14 +24,13 @@ spurdify = "^0.3.0"
 translatepy = "^2.3"
 uwuify = "^1.3.0"
 geopy = "^2.4.0"
-httpx = "^0.24.1"
 pyvis = "^0.3.2"
-cinemagoer = "^2023.5.1"
 networkx = "^3.1"
 openai = "^0.28.0"
 rotten-tomatoes-client = "^0.0.3"
 beautifulsoup4 = "^4.12.2"
 simpleaichat = "^0.2.2"
+cinemagoer = {git = "https://github.com/cinemagoer/cinemagoer"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
