--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,12 +26,13 @@ uwuify = "^1.3.0"
 geopy = "^2.4.1"
 pyvis = "^0.3.2"
 networkx = "^3.2.1"
-openai = "^1.14.0"
+openai = "^1.14.1"
 rotten-tomatoes-client = "^0.0.3"
 beautifulsoup4 = "^4.12.3"
 simpleaichat = "^0.2.2"
 cinemagoer = { git = "https://github.com/cinemagoer/cinemagoer" }
 async-lru = "^2.0.4"
+aiosqlite = "0.17.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
