--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,14 +26,13 @@ uwuify = "^1.3.1"
 geopy = "^2.4.1"
 pyvis = "^0.3.2"
 networkx = "^3.3"
-openai = "^1.23.6"
 rotten-tomatoes-client = "^0.0.3"
 beautifulsoup4 = "^4.12.3"
-simpleaichat = "^0.2.2"
 cinemagoer = { git = "https://github.com/cinemagoer/cinemagoer" }
 async-lru = "^2.0.4"
 aiosqlite = "0.17.0"
 ijson = "^3.2.3"
+litellm = "^1.35.36"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
