--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,6 @@ dateparser = "^1.2.0"
 coloredlogs = "^15.0.1"
 howlongtobeatpy = "^1.0.5"
 spurdify = "^0.3.0"
-translatepy = "^2.3"
 uwuify = "^1.3.1"
 geopy = "^2.4.1"
 pyvis = "^0.3.2"
@@ -32,7 +31,9 @@ cinemagoer = { git = "https://github.com/cinemagoer/cinemagoer" }
 async-lru = "^2.0.4"
 aiosqlite = "0.17.0"
 ijson = "^3.2.3"
-litellm = "^1.36.2"
+litellm = "^1.37.9"
+deep-translator = "^1.11.4"
+translatepy = "^2.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
