--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ ijson = "^3.3.0"
 litellm = "^1.40.20"
 deep-translator = "^1.11.4"
 translatepy = "^2.3"
+aiohttp = "^3.9.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
