--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ litellm = "^1.40.22"
 deep-translator = "^1.11.4"
 translatepy = "^2.3"
 aiohttp = "^3.9.5"
+caribou = "^0.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
