--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,12 @@ license = "MIT"
 python = ">=3.10,<4.0"
 Cerberus = "^1.3.5"
 redvid = "^2.0.5"
-python-telegram-bot = { version = "^21.3", extras = [
+python-telegram-bot = { version = "^21.4", extras = [
     "rate-limiter",
     "job-queue",
     "webhooks",
 ] }
-yt-dlp = "^2024.7.9"
+yt-dlp = "^2024.7.16"
 asyncpraw = "^7.7.1"
 dateparser = "^1.2.0"
 coloredlogs = "^15.0.1"
@@ -30,12 +30,14 @@ cinemagoer = { git = "https://github.com/cinemagoer/cinemagoer" }
 async-lru = "^2.0.4"
 aiosqlite = "0.17.0"
 ijson = "^3.3.0"
-litellm = "^1.41.15"
+litellm = "^1.41.24"
 deep-translator = "^1.11.4"
 translatepy = "^2.3"
 aiohttp = "^3.9.5"
 caribou = "^0.3.0"
 redis = "^5.0.7"
+pyrogram = "^2.0.106"
+tgcrypto = "^1.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
