--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,11 @@ python-telegram-bot = { version = "^21.4", extras = [
     "job-queue",
     "webhooks",
 ] }
-yt-dlp = "^2024.8.1"
+yt-dlp = "^2024.8.6"
 asyncpraw = "^7.7.1"
 dateparser = "^1.2.0"
 coloredlogs = "^15.0.1"
-howlongtobeatpy = "^1.0.6"
+howlongtobeatpy = "^1.0.7"
 spurdify = "^0.3.0"
 uwuify = "^1.3.1"
 geopy = "^2.4.1"
@@ -30,14 +30,15 @@ cinemagoer = { git = "https://github.com/cinemagoer/cinemagoer" }
 async-lru = "^2.0.4"
 aiosqlite = "0.17.0"
 ijson = "^3.3.0"
-litellm = "^1.42.11"
+litellm = "^1.43.18"
 deep-translator = "^1.11.4"
 translatepy = "^2.3"
-aiohttp = "^3.10.0"
+aiohttp = "^3.10.4"
 caribou = "^0.3.0"
 redis = "^5.0.8"
 pyrogram = "^2.0.106"
 tgcrypto = "^1.2.5"
+youtube-transcript-api = "^0.6.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
