--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.10.10",
     "aiosqlite>=0.17.0",
+    "async-lru>=2.0.4",
     "asyncpraw>=7.7.1",
     "beautifulsoup4>=4.12.3",
     "caribou>=0.4.1",
     "coloredlogs>=15.0.1",
     "dateparser>=1.2.0",
+    "deep-translator>=1.11.4",
     "geopy>=2.4.1",
     "howlongtobeatpy>=1.0.8",
     "ijson>=3.3.0",
@@ -22,6 +24,7 @@ dependencies = [
     "pyvis>=0.3.2",
     "redis>=5.1.1",
     "redvid>=2.0.5",
+    "requests>=2.32.3",
     "spurdify>=0.3.0",
     "translatepy>=2.3",
     "uwuify>=1.3.1",
