feat: use embedez for instagram

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,10 @@ dependencies = [
     "litellm>=1.52.12",
     "networkx>=3.4.2",
     "pydantic>=2.10.0",
+    "python-dotenv>=1.0.1",
     "python-telegram-bot[job-queue,rate-limiter,webhooks]>=21.7",
     "pyvis>=0.3.2",
     "redis>=5.2.0",
-    "redvid>=2.0.5",
     "requests>=2.32.3",
     "spurdify>=0.3.0",
     "translatepy>=2.3",
