--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ dependencies = [
     "caribou>=0.4.1",
     "coloredlogs>=15.0.1",
     "dateparser>=1.2.2",
-    "deep-translator>=1.11.4",
     "geopy>=2.4.1",
+    "googletrans>=4.0.2",
+    "gtts>=2.5.4",
     "howlongtobeatpy>=1.0.18",
     "ijson>=3.4.0",
     "litellm>=1.74.0",
@@ -25,7 +26,6 @@ dependencies = [
     "redis>=5.2.0",
     "requests>=2.32.4",
     "spurdify>=0.3.0",
-    "translatepy>=2.3",
     "uwuify>=1.3.1",
     "yt-dlp>=2025.6.30",
 ]
