chore: bump deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,9 @@ dependencies = [
   "gtts>=2.5.4",
   "howlongtobeatpy>=1.0.18",
   "ijson>=3.4.0",
-  "litellm[proxy]~=1.75.8",
+  "litellm[proxy]~=1.77.0",
   "networkx>=3.5",
-  "pydantic>=2.11.7",
+  "pydantic~=2.11.9",
   "python-dotenv>=1.1.1",
   "python-telegram-bot[job-queue,rate-limiter,webhooks]~=22.3",
   "redis>=5.2.0",
